# fast-react

./: .gitignore  Cargo.toml  MASTER_PLAN.md  MASTER_PROGRESS.md  ORCHESTRATOR.md  README.md  WORKER_BRIEF.md  package-lock.json  package.json  tsconfig.base.json
crates/fast-react-napi/: Cargo.toml
crates/fast-react-napi/src/: handle_table.rs  lib.rs  root_work_loop_metadata.rs  tests.rs
crates/fast-react-napi/src/root_bridge_requests/: batch_lifecycle.rs  batch_lifecycle_algorithms.rs  cleanup_generation.rs  cleanup_generation_algorithms.rs  errors.rs  json_transport.rs  json_transport_parser.rs  mod.rs  request_records.rs  request_state.rs  tests.rs  worker_teardown.rs  worker_teardown_algorithms.rs  worker_teardown_rows.rs
crates/fast-react-test-renderer/: Cargo.toml
crates/fast-react-test-renderer/src/: diagnostics.rs  errors.rs  host.rs  host_config_impl.rs  lib.rs  tests.rs
crates/fast-react-test-renderer/src/diagnostics/: constants.rs  core.rs  create_route.rs  error_boundary.rs  fixtures.rs  host_node_cleanup.rs  host_output.rs  json.rs  test_instance.rs  tree.rs  update_route.rs
crates/fast-react-test-renderer/src/root_impl/: act.rs  create_route.rs  error_boundary.rs  fixtures.rs  host_output.rs  lifecycle.rs  lifecycle_execution.rs  mod.rs  serialization_execution.rs  test_instance.rs  unmount_route.rs  update_route.rs
crates/fast-react-test-renderer/src/tests/: create_route.rs  host_config.rs  host_output.rs  json_serialization.rs  root_facade_scheduler.rs  root_lifecycle.rs  serialization_identity.rs  test_instance.rs  tree_serialization.rs  (+2 more)
(+2458 files in other folders)
