[workspace]
resolver = "3"
members = [
  "crates/fast-react-core",
  "crates/fast-react-host-config",
  "crates/fast-react-reconciler",
  "crates/fast-react-test-renderer",
  "crates/fast-react-napi",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95.0"
publish = false

[workspace.dependencies]
fast-react-core = { path = "crates/fast-react-core" }
fast-react-host-config = { path = "crates/fast-react-host-config" }
fast-react-reconciler = { path = "crates/fast-react-reconciler" }
