[package]
name = "fast-react-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
fast-react-reconciler.workspace = true
fast-react-test-renderer = { path = "../fast-react-test-renderer" }
serde_json = "1.0"
