[package]
name = "fast-react-test-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
fast-react-core.workspace = true
fast-react-host-config.workspace = true
fast-react-reconciler.workspace = true

[lib]
path = "src/lib.rs"
